# src/apps/agroApi/routes/Family/reqSchemas.ts
@@ -21,3 +21,20 @@ export const getFamilyBySlugReqSchema = [
   param('slug').exists().isString().notEmpty(),
   checkExact()
 ];
+
+export const updateFamilyReqSchema = [
+  param('id').exists().isString().notEmpty(),
+  body('slug').optional().isString().notEmpty(),
+  body('name').optional().isString().notEmpty(),
+  body('aliases').optional().isArray(),
+  body('scientificName').optional().isString().notEmpty(),
+  body('shortDescription').optional().isString().notEmpty(),
+  body('highlights').optional().isArray(),
+  body('extra').optional().isObject(),
+
+  body('extra.order').optional().isString().notEmpty(),
+  body('extra.distribution').optional().isString().notEmpty(),
+  body('extra.speciesCount').optional().isInt({ min: 1 }),
+
+  checkExact()
+];
